[tool.poetry]
name = "caesar-cipher"
version = "0.1.0"
description = ""
authors = ["Matthew Holder <holdermatthew5@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^6.2.2"
numpy = "^1.20.0"
scipy = "^1.6.0"
nltk = "^3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
